--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -11,7 +11,7 @@
   }
 
   .c     { color: #646f82; font-style: italic } // Comment
-  .err   { color: #fff; background-color: } // Error
+  .err   { color: #fff; background-color: #292a30 } // Error
   .k     { color: #fd7cb2; font-weight: bold } // Keyword
   .o     { font-weight: bold } // Operator
   .cm    { color: #998; font-style: italic } // Comment.Multiline
