--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@ layout: default
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
+        Syntax highlighting powered by
+        <a class="u-url" href="https://github.com/JohnSundell/Splash">Splash</a>
+    </p>
+    <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
