--- a/assets/main.css
+++ b/assets/main.css
@@ -13,7 +13,7 @@ dl, dd, ol, ul, figure {
 body {
   font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #111;
-  background-color: #fdfdfd;
+  background-color: #e7e7e7;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
@@ -76,10 +76,10 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #2a7ae2;
+  color: #3f829c;
   text-decoration: none; }
   a:visited {
-    color: #1756a9; }
+    color: #295566; }
   a:hover {
     color: #111;
     text-decoration: underline; }
@@ -184,54 +184,6 @@ table {
     border: 1px solid #e8e8e8; }
 
 /**
- *  Example CSS file that can be used to style Splash HTML output
- *  Copyright (c) John Sundell 2018
- *  MIT license - see LICENSE.md
- */
-pre {
-  margin-bottom: 1.5em;
-  background-color: #1a1a1a;
-  padding: 16px 0;
-  border-radius: 16px; }
-
-pre code {
-  font-family: monospace;
-  display: block;
-  padding: 0 20px;
-  color: #a9bcbc;
-  line-height: 1.4em;
-  font-size: 0.95em;
-  overflow-x: auto;
-  white-space: pre; }
-
-pre code .keyword {
-  color: #e73289; }
-
-pre code .type {
-  color: #8281ca; }
-
-pre code .call {
-  color: #348fe5; }
-
-pre code .property {
-  color: #21ab9d; }
-
-pre code .number {
-  color: #db6f57; }
-
-pre code .string {
-  color: #fa641e; }
-
-pre code .comment {
-  color: #6b8a94; }
-
-pre code .dotAccess {
-  color: #92b300; }
-
-pre code .preprocessing {
-  color: #b68a00; }
-
-/**
  * Site header
  */
 .site-header {
@@ -241,7 +193,7 @@ pre code .preprocessing {
   position: relative; }
 
 .site-title {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 300;
   line-height: 54px;
   letter-spacing: -1px;
@@ -267,7 +219,7 @@ pre code .preprocessing {
       position: absolute;
       top: 9px;
       right: 15px;
-      background-color: #fdfdfd;
+      background-color: #e7e7e7;
       border: 1px solid #e8e8e8;
       border-radius: 5px;
       text-align: right; }
@@ -364,7 +316,7 @@ pre code .preprocessing {
   font-size: 32px; }
 
 .post-list-heading {
-  font-size: 28px; }
+  font-size: 19.2px; }
 
 .post-list {
   margin-left: 0;
