--- a/assets/main.css
+++ b/assets/main.css
@@ -563,7 +563,7 @@ pre code .comment {
   color: #6b8a94; }
 
 pre code .dotAccess {
-  color: #e4e008; }
+  color: #c8e9b9; }
 
 pre code .preprocessing {
   color: #fba15e; }
