Code syntax changes

--- a/assets/main.css
+++ b/assets/main.css
@@ -573,10 +573,10 @@ pre code .property {
   color: #ffd6a7; }
 
 pre code .number {
-  color: #ffd6a7; }
+  color: #ffffff; }
 
 pre code .string {
-  color: #ffd6a7; }
+  color: #ffffff; }
 
 pre code .comment {
   color: #6b8a94; }
